--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Resource files
+EnviromentVariables.Designer.cs
+EnviromentVariables.resx
