--- a/src/message-queue/message-queue.csproj
+++ b/src/message-queue/message-queue.csproj
@@ -158,7 +158,9 @@
       <DependentUpon>EnviromentVariables.resx</DependentUpon>
     </Compile>
     <Compile Include="Base\View\CounterConvertor.cs" />
+    <Compile Include="Base\View\EmoteURLToImageConverter.cs" />
     <Compile Include="Base\View\PaginationConvertor.cs" />
+    <Compile Include="Base\View\VisibilityConverter.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="Model\Twitch.cs" />
     <Compile Include="Model\TwitchResponseBadges.cs" />
