Refactor code, delete unused namespaces, add keyboard shortcuts

--- a/src/message-queue/message-queue.csproj
+++ b/src/message-queue/message-queue.csproj
@@ -182,9 +182,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EnviromentVariables.resx</DependentUpon>
     </Compile>
-    <Compile Include="Base\View\CounterConvertor.cs" />
+    <Compile Include="Base\View\CounterConverter.cs" />
     <Compile Include="Base\View\EmoteURLToImageConverter.cs" />
-    <Compile Include="Base\View\PaginationConvertor.cs" />
+    <Compile Include="Base\View\PaginationConverter.cs" />
     <Compile Include="Base\View\VisibilityConverter.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="Model\Twitch.cs" />
